<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="agri_asan.com.agriasan06_12_19.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_subsidy"
        android:name="agri_asan.com.agriasan06_12_19.SubsidyFragment"
        android:label="@string/title_subsidy"
        tools:layout="@layout/fragment_subsidy" />

    <fragment
        android:id="@+id/navigation_bazaar"
        android:name="agri_asan.com.agriasan06_12_19.MemberBazaarFragment"
        android:label="@string/title_bazaar"
        tools:layout="@layout/fragment_bazaar" />

    <fragment
        android:id="@+id/navigation_public_opinion"
        android:name="agri_asan.com.agriasan06_12_19.PublicOpinionFragment"
        android:label="@string/title_public_opinion"
        tools:layout="@layout/fragment_public_opinion" />
</navigation>