<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:alpha="0.3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:src="@drawable/background_1_web"
            android:padding="0dp"
            android:layout_margin="0dp"
            >
        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:paddingTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:layout_weight="0.4"
                android:layout_width="0dp"
                android:layout_height="match_parent">

            </View>
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="10"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_weight="0.5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:background="@drawable/selected_fasal_type_background"
                    >

                    <EditText
                        android:hint="@string/receiver_name"
                        android:gravity="start|center_vertical"
                        android:textColor="#000"
                        android:textSize="@dimen/_10ssp"
                        android:id="@+id/edittext_receiver_name"
                        android:layout_weight="7"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">
                    </EditText>

                    <RelativeLayout
                        android:layout_weight="2.5"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">
                        <TextView
                            android:padding="5dp"
                            android:textSize="@dimen/_10ssp"
                            android:gravity="center"
                            android:textColor="#000"
                            android:textStyle="bold"
                            android:text="@string/name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        </TextView>

                        <TextView
                            android:textFontWeight="5"
                            android:textSize="@dimen/_12ssp"
                            android:gravity="center"
                            android:textColor="#000"
                            android:textStyle="bold"
                            android:background="@drawable/fasal_type_tittle_icon_background"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        </TextView>

                    </RelativeLayout>



                </LinearLayout>
                <View
                    android:layout_weight="0.1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">

                </View>
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:background="@drawable/selected_fasal_type_background"
                    >

                    <EditText
                        android:hint="@string/delivery_address"
                        android:layout_marginEnd="1dp"
                        android:gravity="top|end"
                        android:textAlignment="viewEnd"
                        android:textColor="#000"
                        android:textSize="@dimen/_10ssp"
                        android:id="@+id/edittext_receiver_address"
                        android:layout_weight="7"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">
                    </EditText>

                    <RelativeLayout
                        android:layout_weight="2.5"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">
                        <TextView
                            android:padding="5dp"
                            android:textSize="@dimen/_12ssp"
                            android:gravity="center"
                            android:textColor="#000"
                            android:textStyle="bold"
                            android:text="@string/address"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        </TextView>

                        <TextView
                            android:gravity="center"
                            android:textColor="#000"
                            android:textStyle="bold"
                            android:background="@drawable/fasal_type_tittle_icon_background"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        </TextView>

                    </RelativeLayout>



                </LinearLayout>
                <View
                    android:layout_weight="0.1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">

                </View>
                <LinearLayout
                    android:layout_weight="0.7"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:background="@drawable/selected_fasal_type_background"
                    >

                    <EditText
                        android:inputType="number"
                        android:maxLength="11"
                        android:hint="@string/phn_hint_2"
                        android:layout_marginEnd="1dp"
                        android:gravity="end|center_vertical"
                        android:textColor="#000"
                        android:textSize="@dimen/_10ssp"
                        android:id="@+id/edittext_receiver_phone"
                        android:layout_weight="7"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">
                    </EditText>

                    <RelativeLayout
                        android:layout_weight="2.5"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">
                        <TextView
                            android:padding="5dp"
                            android:textSize="@dimen/_12ssp"
                            android:gravity="center"
                            android:textColor="#000"
                            android:textStyle="bold"
                            android:text="@string/phn_no"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        </TextView>

                        <TextView
                            android:textSize="@dimen/_10ssp"
                            android:gravity="center"
                            android:textColor="#000"
                            android:textStyle="bold"
                            android:background="@drawable/fasal_type_tittle_icon_background"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        </TextView>

                    </RelativeLayout>



                </LinearLayout>

                <View
                    android:layout_weight="0.05"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">

                </View>
                <TextView
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:textSize="@dimen/_13ssp"
                    android:gravity="center"
                    android:text="@string/your_cart_products"
                    android:layout_weight="0.4"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">

                </TextView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.05">
                </View>
                <ListView
                    android:scrollbars="vertical"
                    android:divider="@drawable/transparent_background"
                    android:dividerHeight="5dp"
                    android:id="@+id/list_products_to_purchase"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.1">
                </View>
                <TextView
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:textSize="@dimen/_13ssp"
                    android:gravity="center"
                    android:text="@string/cash_on_delivery"
                    android:layout_weight="0.4"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">

                </TextView>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.1">
                </View>
                <LinearLayout
                    android:background="#ECE9E9"
                    android:layout_weight="0.5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">

                    <View
                        android:layout_weight="0.5"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">
                    </View>

                    <Button
                        android:textStyle="bold"
                        android:layout_weight="3"
                        android:id="@+id/btn_order"
                        android:text="@string/buy"
                        android:autoSizeMaxTextSize="26dp"
                        android:autoSizeStepGranularity="10sp"
                        android:textColor="#FFFFFF"
                        android:textAlignment="center"
                        android:autoSizeTextType="uniform"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/buttonshape_submit"
                        />
                    <View
                        android:layout_weight="0.5"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">
                    </View>
                    <TextView
                        android:gravity="center"
                        android:id="@+id/textview_total_price"
                        android:textColor="@color/primary_dark"
                        android:textStyle="bold"
                        android:autoSizeTextType="uniform"
                        android:text="100000"
                        android:textAlignment="center"
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">

                    </TextView>
                    <View
                        android:layout_weight="0.5"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">
                    </View>

                    <TextView
                        android:gravity="center"
                        android:textColor="@color/primary_dark"
                        android:textStyle="bold"
                        android:autoSizeTextType="uniform"
                        android:text="@string/your_bill"
                        android:textAlignment="center"
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">

                    </TextView>

                    <View
                        android:layout_weight="0.5"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">
                    </View>



                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.1">
                </View>




            </LinearLayout>
            <View
                android:layout_weight="0.4"
                android:layout_width="0dp"
                android:layout_height="match_parent">

            </View>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>